Added Auth0 to routes and API-docs
